# free_bao

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
agent/: react_agent.py
memory/: memory.py
memory_db/: chroma.sqlite3
simulation/: benchmark.py
src/free_bao/: main.py  utils.py
src/free_bao/agent/: react_agent.py
src/free_bao/memory/: cer.py  mo_cer.py
src/free_bao/simulation/: benchmark.py  user_simulator.py
tests/: test_free_bao.py
wandb/: latest-run
wandb/offline-run-20260219_140839-0y3tk08g/: run-0y3tk08g.wandb
wandb/offline-run-20260219_140923-ex639okp/: run-ex639okp.wandb
wandb/run-20260219_162929-8uhau536/: run-8uhau536.wandb
wandb/run-20260219_162929-8uhau536/files/: config.yaml  wandb-metadata.json
wandb/run-20260219_164039-idjx1wow/: run-idjx1wow.wandb
wandb/run-20260219_164039-idjx1wow/files/: config.yaml  requirements.txt  wandb-metadata.json
